[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scenes/PoliciaJose2.gd" type="Script" id=1]
[ext_resource path="res://assets/Images/Policia/Jose/policiaSprite.png" type="Texture" id=2]
[ext_resource path="res://assets/Music/Nivel 1/Muerte.mp3" type="AudioStream" id=3]

[sub_resource type="CapsuleShape2D" id=5]
radius = 18.0
height = 46.0

[sub_resource type="CapsuleShape2D" id=1]
radius = 15.0
height = 48.0

[sub_resource type="Animation" id=7]
resource_name = "Ataque"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 7, 8, 9, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AreaMacana/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=2]
resource_name = "Idle"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "NoMove"
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6 ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Walk"
length = 3.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 3, 2 ]
}

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 20.5, 5 )

[node name="PoliciaJose" type="Node2D"]
position = Vector2( 293, 472 )

[node name="PoliciaJose2" type="KinematicBody2D" parent="."]
position = Vector2( 2, -2 )
script = ExtResource( 1 )

[node name="Position2D" type="Position2D" parent="PoliciaJose2"]
position = Vector2( 1, 1 )
__meta__ = {
"_edit_group_": true
}

[node name="AreaJose" type="Area2D" parent="PoliciaJose2"]
collision_layer = 23
collision_mask = 23

[node name="CollisionShape2D" type="CollisionShape2D" parent="PoliciaJose2/AreaJose"]
position = Vector2( -1, -3 )
shape = SubResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PoliciaJose2"]
position = Vector2( -2, -4 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="PoliciaJose2"]
position = Vector2( -4, -3 )
texture = ExtResource( 2 )
hframes = 11

[node name="Camera2D" type="Camera2D" parent="PoliciaJose2"]
position = Vector2( -220, -81 )
offset = Vector2( 300, 0 )
current = true
zoom = Vector2( 0.5, 0.5 )
limit_left = -100
limit_top = 280
limit_right = 1600
limit_bottom = 10

[node name="AnimationPlayer" type="AnimationPlayer" parent="PoliciaJose2"]
anims/Ataque = SubResource( 7 )
anims/Idle = SubResource( 2 )
anims/NoMove = SubResource( 6 )
anims/RESET = SubResource( 3 )
anims/Walk = SubResource( 4 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="PoliciaJose2"]
stream = ExtResource( 3 )

[node name="Timer" type="Timer" parent="PoliciaJose2"]
process_mode = 0

[node name="AreaMacana" type="Area2D" parent="PoliciaJose2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PoliciaJose2/AreaMacana"]
position = Vector2( 28, 8 )
shape = SubResource( 8 )
disabled = true

[connection signal="area_entered" from="PoliciaJose2/AreaJose" to="PoliciaJose2" method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="PoliciaJose2/AreaJose" to="PoliciaJose2" method="_on_Area2D_body_entered"]
[connection signal="timeout" from="PoliciaJose2/Timer" to="PoliciaJose2" method="_on_Timer_timeout"]
